--- a/Ardoise/app/src/main/res/values/strings.xml
+++ b/Ardoise/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Ardoise</string>
+    <string name="hello_text">Bienvenue sur votre application de gestion d\'ardoise.\n\n Veuillez entrer votre nom.</string>
+    <string name="connexion_text">Name</string>
+    <string name="connexion_button">Connexion</string>
 </resources>
